<resources>
    <string name="app_name">KickForRead</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_calendar">My Calendar</string>
    <string name="title_book_status">Books Status</string>
    <string name="title_contacts">Contacs</string>
    <string name="ads">Ads</string>

    <string name="finish_book">I finished it!</string>
    <string name="add_book">Start reading this book</string>

    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="last_date">30</string>

    <string name="book_is_finished" formatted="false">Book finished: %s</string>
    <string name="widget_info" formatted="false">Author: %s\nCategory: %s\nYou start read this book on %s</string>

    <string name="list_empty">List is empty</string>
    <string name="book_added">Book added to your list</string>
    <string name="did_it">You did it! Congratulation!</string>
    <string name="email">y23helen@gmail.com</string>
    <string name="contacts_info"> Hello everyone!\nI present you an awesome tool which will kick you everyday for reading! You can add the book and start checking each day when you read.
        Be careful, you can check only current day, so don\'t miss checks. So that you can not fool your calendar.
    In future will be implemented cute read statistic =)\n
    If you have some suggestions what will make this app better fill free to write on email.</string>

    <!--Add Book Screen-->
    <string name="title_activity_add_book">AddBookActivity</string>
    <string name="enter_title">Enter book title</string>
    <string name="enter_author">Enter book author</string>
    <string name="enter_category">What Kind of Book?</string>
    <string name="paint">color</string>

    <!--Widget-->
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_background">widget</string>

    <!--Reminder notifications-->
    <string name="read_reminder_notification_title">This is your KICK for READING</string>
    <string name="read_reminder_notification_body">Have you read today?</string>

    <!--test ads-->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <!--Errors-->
    <string name="no_data">There are no books yet =(</string>

    <!--Content Descriptions-->
    <string name="cd_book_label">Book color label</string>
    <string name="cd_app_logo">Application Logo</string>
    <string name="cd_next_month">Go to next month</string>
    <string name="cd_previous_month">Go to previous month</string>
    <string name="cd_contact">Cute ghost image</string>
    <string name="cd_fab">Floating button to check day or add book</string>
    <string name="communicate">Communicate</string>
    <string name="provider_gettype">We are not implementing getType in KickForRead</string>
    <string name="provider_insert">We are not implementing insert in CheckedDaysDb. Use bulkInsert instead</string>
    <string name="provider_update">We are not implementing update in Db</string>
    <string name="unknown_uri">Unknown uri:</string>


</resources>
