<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_date_range_black_48dp"
            android:title="@string/title_calendar" />
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_book_status" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_ads"
                android:icon="@drawable/ic_spa_black_48dp"
                android:title="@string/ads" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
