<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:name="com.fragment.NavigationDrawerFragment">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_custom_calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@id/my_ads_banner">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/previous_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_keyboard_arrow_left_black_48dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/display_current_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/current_date"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:layout_weight="3"
                />
            <ImageView
                android:id="@+id/next_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_keyboard_arrow_right_black_48dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/sun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/sun"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/mon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/mon"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/tue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/tue"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/wed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/wed"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/thu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/thu"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/fri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/fri"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:text="@string/sat"
                android:layout_marginTop="4dp"
                android:textStyle="bold"
                android:layout_weight="1"/>
        </LinearLayout>
        <GridView
            android:id="@+id/calendar_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="7"/>
    </LinearLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/my_ads_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />


</RelativeLayout>